# serial_tcp_clients

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  conftest.py  ports.example.yaml  pyproject.toml  setup.py
PROMPT/design_handoff_serial_tcp_port_manager/: Port Manager.dc.html  README.md  reference_all_variations.dc.html
deploy/: build-gui.bat  build.bat
gui/: README.md  pyproject.toml
gui/serialtcp_gui/: __init__.py  __main__.py  about.py  ansi.py  app.py  config.py  detail.py  port_card.py  theme.py  util.py  widgets.py
serialtcp/: __init__.py  __main__.py  client.py  serial_port.py  server.py  service.py  tcp_server.py
serialtcp/gui/: __init__.py  __main__.py  app.py  detail.py  dialog.py  port_card.py  util.py  widgets.py
tests/: test_gui_config.py  test_serialClient.py  test_serialPort.py  test_serialServer.py  test_service.py  test_service_unit.py
