[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "serial-tcp-clients"
version = "2.1.0"
description = "Share serial device through TCP connections"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "maslovw", email = "serialtcp@maslovw.com"},
]
keywords = ["serial", "com", "port", "tcp", "server", "socket"]
dependencies = [
    "pyserial>=3.3",
]

[project.optional-dependencies]
# GUI also needs Tkinter, which ships with most CPython builds but on Linux may
# require a system package (e.g. Debian/Ubuntu: `apt install python3-tk`).
gui = [
    "PyYAML>=5.1",
]

[tool.setuptools.packages.find]
include = ["serialtcp*"]

[project.scripts]
serial-tcp-server = "serialtcp.tcp_server:parse_args"
serial-tcp-gui = "serialtcp.gui.app:main"

[project.urls]
Homepage = "https://github.com/maslovw/serial_tcp_clients"
