[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "serial-tcp-clients"
dynamic = ["version"]
description = "Share serial device through TCP connections"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "maslovw", email = "serialtcp@maslovw.com"},
]
keywords = ["serial", "com", "port", "tcp", "server", "socket"]
dependencies = [
    "pyserial>=3.3",
]

[tool.setuptools.dynamic]
version = {attr = "serialtcp.__version__"}

[tool.setuptools.packages.find]
include = ["serialtcp", "serialtcp.*"]

[project.scripts]
serial-tcp-server = "serialtcp.tcp_server:parse_args"

[project.urls]
Homepage = "https://github.com/maslovw/serial_tcp_clients"
